--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
 
           <div class="d-flex justify-content-center gap-3 my-4 w-100">
             <div class="forecast-card">
-              <p>Mon</p><i class="bi bi-cloud"></i>
-              <p>35° / 67°</p>
+              <p class="fs-3">Mon</p><i class="bi bi-cloud"></i>
+              <p class="fs-4">35° / 67°</p>
             </div>
             <div class="forecast-card">
-              <p>Tue</p><i class="bi bi-cloud-sun"></i>
-              <p>33° / 64°</p>
+              <p class="fs-3">Tue</p><i class="bi bi-cloud-sun"></i>
+              <p class="fs-4">33° / 64°</p>
             </div>
             <div class="forecast-card">
-              <p>Wed</p><i class="bi bi-cloud"></i>
-              <p>39° / 72°</p>
+              <p class="fs-3">Wed</p><i class="bi bi-cloud"></i>
+              <p class="fs-4">39° / 72°</p>
             </div>
             <div class="forecast-card">
-              <p>Thu</p><i class="bi bi-cloud-rain"></i>
-              <p>38° / 70°</p>
+              <p class="fs-3">Thu</p><i class="bi bi-cloud-rain"></i>
+              <p class="fs-4">38° / 70°</p>
             </div>
             <div class="forecast-card">
-              <p>Fri</p><i class="bi bi-cloud-lightning"></i>
-              <p>42° / 75°</p>
+              <p class="fs-3">Fri</p><i class="bi bi-cloud-lightning"></i>
+              <p class="fs-4">42° / 75°</p>
             </div>
           </div>
 
@@ -62,7 +62,7 @@
           <li><img src="./assets/fc1b1478abfcae9e1f878a292e9542cf45b2b707.png" alt="star">Stockton, CA</li>
           <li><img src="./assets/fc1b1478abfcae9e1f878a292e9542cf45b2b707.png" alt="star">Elk Grove, CA</li>
           <li><img src="./assets/fc1b1478abfcae9e1f878a292e9542cf45b2b707.png" alt="star">Livermore, CA</li>
-          <li><img src="./assets/fc1b1478abfcae9e1f878a292e9542cf45b2b707.png" alt="star"> Sacramento, CA</li>
+          <li><img src="./assets/fc1b1478abfcae9e1f878a292e9542cf45b2b707.png" alt="star">Sacramento, CA</li>
         </ul>
         <hr>
         <h6>Weather Details</h6>
